[dev] Add lazy to queue and refactor {2020-04-06 22:29}

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 management.endpoints.web.exposure.include=market
+
+# configure Tomcat
+server.tomcat.max-threads=200
+server.compression.enabled=true
