[dev] temp commit for failure of build {2021-07-24 08:02}

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.opal</groupId>
 	<artifactId>market</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>market</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -19,6 +19,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.opal</groupId>
+			<artifactId>server</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
